--- a/style.css
+++ b/style.css
@@ -2,11 +2,29 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('/images/bgi-2.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+@font-face {
+    font-family: title-font;
+    src: url(/font/title/04B_30__.TTF);
+}
+
+@font-face {
+    font-family: buttons-font;
+    src: url(/font/buttons/PressStart2P.ttf);
 }
 
 
 h1 {
-    color: rgb(0, 102, 255);
+    color: rgb(255, 222, 59);
+    font-family: title-font;
+    font-size: 48px;
+    margin: 50px 0px;
 }
 
 #canva {
@@ -18,6 +36,8 @@ h1 {
     border: 1px solid black;
     margin-left: 16px;
     background-color: white;
+    border: 3px solid black;
+    border-radius: 8px;
 }
 
 #container {
@@ -28,13 +48,27 @@ h1 {
 #buttons {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    height: 9.2cm;
+    gap: 18px;
     align-items: center;
+    background-color: hsl(360, 100%, 100%, 0.6);
+    padding: 16px;
+    border: 3px solid black;
+    border-radius: 8px;
+    font-family: buttons-font;
+    font-size: 12px;
 }
 
+/* input[type=button] {
+    font-family: buttons-font;
+    font-size: 14px;
+} */
+
 button {
-    padding: 4px 12px;
-    width: 80px;
+    padding: 8px 16px;
+    /* width: 80px; */
+    font-family: buttons-font;
+    font-size: 12px;
 }
 
 #gridSize {
