--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('/images/bgi-2.png');
+    background-image: url(images/bgi-2.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,12 +11,12 @@ body {
 
 @font-face {
     font-family: title-font;
-    src: url(/font/title/04B_30__.TTF);
+    src: url(font/title/04B_30__.TTF);
 }
 
 @font-face {
     font-family: buttons-font;
-    src: url(/font/buttons/PressStart2P.ttf);
+    src: url(font/buttons/PressStart2P.ttf);
 }
 
 
