--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ button {
     font: inherit;
     box-sizing: border-box;
     opacity: 0.8;
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-    transition: opacity .2s;
+    -webkit-transition: 0.1s;
+    transition: opacity 0.1s;
     border: 2px solid black;
 }
 
@@ -89,22 +89,22 @@ button {
 
 /* Slider thumb - Mozilla */
 #gridSize::-moz-range-thumb {
-    width: 12px; /* Set a specific slider handle width */
-    height: 18px; /* Slider handle height */
+    width: 12px; 
+    height: 18px; 
     border-radius: 6px;
-    background: rgb(255, 222, 59); /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    background: rgb(255, 222, 59); 
+    cursor: pointer; 
     border: 2px solid black;
 }
 
 /* Slider thumb - Chrome, Opera, Safari, Edge */
 #gridSize::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none; 
     appearance: none;
-    width: 15px; /* Set a specific slider handle width */
-    height: 22px; /* Slider handle height */
+    width: 15px; 
+    height: 22px; 
     border-radius: 6px;
-    background: rgb(255, 222, 59); /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    background: rgb(255, 222, 59); 
+    cursor: pointer; 
     border: 2px solid black;
   }
